--- a/content/python-decorators/python-decorators.mdx
+++ b/content/python-decorators/python-decorators.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Python Decorators'
 date: '2023-09-24'
-tags: ['next.js', 'python']
+tags: ['programming', 'python']
 ---
 
 # Introduction to Python Decorators
