--- a/content/react-rendering-process/react-rendering-process.mdx
+++ b/content/react-rendering-process/react-rendering-process.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'React Rendering Process'
+title: 'Understanding the React Rendering Process: A Deep Dive'
 date: '2023-10-6'
 tags: ['programming', 'JavaScript', 'ReactJS']
+banner: 'https://res.cloudinary.com/doaw1mqkw/image/upload/v1698612577/toukhy/christian-holzinger-CUY_YHhCFl4-unsplash-compresses_xk8iun.jpg'
+bannerCredits: Photo by Christian Holzinger (https://unsplash.com/@pixelatelier)
 ---
-
-# Understanding the React Rendering Process: A Deep Dive
 
 React has become the go-to JavaScript library for building modern, interactive user interfaces. One of the key reasons behind React's popularity is its efficient rendering process, which allows developers to create highly performant applications. In this blog post, we'll take a deep dive into the React rendering process to understand how it works and how it contributes to React's speed and reactivity.
 
