--- a/content/higher-order-functions-in-javascript/index.mdx
+++ b/content/higher-order-functions-in-javascript/index.mdx
@@ -8,7 +8,7 @@ bannerCredits: Photo by Gabriel Izgi (https://unsplash.com/@gabrielizgi)
 
 Higher-order functions are functions that can take other functions as arguments or return functions as their results. They are a powerful feature in JavaScript, allowing for more flexible and expressive code.
 
-```javascript
+```javascript title=javascript
 // Higher-order function example: map
 function map(array, transform) {
   var result = [];
