--- a/content/inheritance-in-javascript/index.mdx
+++ b/content/inheritance-in-javascript/index.mdx
@@ -8,7 +8,7 @@ bannerCredits: Photo by Jason Leung (https://unsplash.com/@ninjason)
 
 Inheritance is a fundamental concept in object-oriented programming that allows objects to inherit properties and methods from parent objects. In JavaScript, inheritance can be achieved through prototype chaining.
 
-```javascript
+```javascript title=javascript
 // Parent class
 function Animal(name) {
   this.name = name;
@@ -50,7 +50,7 @@ By leveraging prototype chaining, JavaScript enables us to create a hierarchy of
 
 Higher-order functions are functions that can take other functions as arguments or return functions as their results. They are a powerful feature in JavaScript, allowing for more flexible and expressive code.
 
-```javascript
+```javascript title=javascript
 // Higher-order function example: map
 function map(array, transform) {
   var result = [];
