--- a/content/getting-started-with-next-js-13/index.mdx
+++ b/content/getting-started-with-next-js-13/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Getting Started with Next.js 13'
-date: 'October 1st, 2023'
+date: '2023-10-01'
 tags: ['programming', 'JavaScript', 'ReactJS', 'NextJS']
 banner: 'https://res.cloudinary.com/doaw1mqkw/image/upload/v1699259144/toukhy/meric-dagli-VbLsByQrhz4-unsplash-compressed_lbp310.jpg'
 bannerCredits: Photo by Meric Dagli (https://unsplash.com/@meric-dagli)
