--- a/content/inheritance-in-javascript/index.mdx
+++ b/content/inheritance-in-javascript/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Inheritance in JavaScript'
-date: 'Septemper 2nd, 2023'
+date: '2023-09-01'
 tags: ['programming', 'JavaScript']
 banner: 'https://res.cloudinary.com/doaw1mqkw/image/upload/v1700403089/toukhy/jason-leung-LNFTAU-9oZw-unsplash-compressed_fjquj7.jpg'
 bannerCredits: Photo by Jason Leung (https://unsplash.com/@ninjason)
