--- a/content/styling-in-next-js-13/index.mdx
+++ b/content/styling-in-next-js-13/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Styling in Next.js 13'
-date: 'November 1st, 2023'
+date: '2023-11-01'
 tags: ['programming', 'JavaScript', 'ReactJS', 'NextJS']
 banner: 'https://res.cloudinary.com/doaw1mqkw/image/upload/v1699259403/toukhy/steve-johnson-mfYFY0XnFug-unsplash-compressed_hpiwjb.jpg'
 bannerCredits: Photo by Steve Johnson (https://unsplash.com/@steve-johnson)
