--- a/content/understanding-the-react-rendering-process-a-deep-dive/index.mdx
+++ b/content/understanding-the-react-rendering-process-a-deep-dive/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Understanding the React Rendering Process: A Deep Dive'
-date: 'December 1st, 2023'
+date: '2023-12-01'
 tags: ['programming', 'JavaScript', 'ReactJS']
 banner: 'https://res.cloudinary.com/doaw1mqkw/image/upload/v1698612577/toukhy/christian-holzinger-CUY_YHhCFl4-unsplash-compresses_xk8iun.jpg'
 bannerCredits: Photo by Christian Holzinger (https://unsplash.com/@pixelatelier)
