--- a/content/higher-order-functions-in-javascript/index.mdx
+++ b/content/higher-order-functions-in-javascript/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Higher Order Functions in JavaScript'
-date: 'June 3rd, 2023'
+date: '2023-06-01'
 tags: ['programming', 'JavaScript']
 banner: 'https://res.cloudinary.com/doaw1mqkw/image/upload/v1700404477/toukhy/gabriel-izgi-cfQEO_1S0Rs-unsplash-compressed_fnv3oe.jpg'
 bannerCredits: Photo by Gabriel Izgi (https://unsplash.com/@gabrielizgi)
