--- a/content/react-understanding-the-jsx/index.mdx
+++ b/content/react-understanding-the-jsx/index.mdx
@@ -26,7 +26,7 @@ const Greeting = () => {
 };
 ```
 
-### Is the same as
+**Is the same as**
 
 ```jsx title="ComponentOne.js"
 function Greeting({ name }) {
