--- a/content/styling-in-next-js-13/index.mdx
+++ b/content/styling-in-next-js-13/index.mdx
@@ -19,6 +19,8 @@ CSS Modules is a popular approach for styling React applications, and it works s
 }
 ```
 
+**then you would use it like this in the component**
+
 ```jsx title="MyComponent.js"
 import styles from './styles.module.css';
 
